Fix revised Note publication lifecycle
